--- a/app/src/main/res/layout/activity_restaurant_view.xml
+++ b/app/src/main/res/layout/activity_restaurant_view.xml
@@ -40,5 +40,27 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView" />
+        <TextView
+            android:id="@+id/textViewRatingValue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+
+        <RatingBar
+            android:id="@+id/ratingBarView"
+            android:layout_width="251dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="96dp"
+            android:layout_marginLeft="96dp"
+            android:layout_marginRight="96dp"
+            android:layout_marginStart="96dp"
+            android:layout_marginTop="8dp"
+            android:numStars="4"
+            android:rating="2.0"
+            android:stepSize="1.0"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextTags" />
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
