--- a/app/src/main/res/layout/activity_restaurant_view.xml
+++ b/app/src/main/res/layout/activity_restaurant_view.xml
@@ -6,6 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".PresenterViewActivity">
 
+    <Button
+        android:id="@+id/btnShareEmail"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Share via Email"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -40,5 +54,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView" />
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
