added share via twitter to view restaurant activity
added share via twitter to view restaurant activity

--- a/app/src/main/res/layout/activity_restaurant_view.xml
+++ b/app/src/main/res/layout/activity_restaurant_view.xml
@@ -7,6 +7,36 @@
     tools:context=".RestaurantViewActivity">
 
     <Button
+        android:id="@+id/btnShareTwitter"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Share via Twitter"
+        app:layout_constraintBottom_toTopOf="@+id/btnShareEmail"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnShareFacebook"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Share via Facebook"
+        app:layout_constraintBottom_toTopOf="@+id/btnShareTwitter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
         android:id="@+id/btnShareEmail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
