--- a/app/src/main/res/layout/activity_add_restaurant.xml
+++ b/app/src/main/res/layout/activity_add_restaurant.xml
@@ -8,112 +8,112 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="383dp"
-        android:layout_height="26dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
+        android:layout_width="245dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="65dp"
+        android:layout_marginLeft="74dp"
+        android:layout_marginRight="65dp"
+        android:layout_marginStart="74dp"
         android:text="Add Restaurant"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="#340c84"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/txtRatingValue"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextName"
-        android:layout_width="366dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="7dp"
-        android:layout_marginLeft="7dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="299dp"
+        android:layout_height="51dp"
         android:layout_marginEnd="11dp"
+        android:layout_marginLeft="7dp"
         android:layout_marginRight="11dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="name "
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.537"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
         android:id="@+id/editTextAddress"
-        android:layout_width="366dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="11dp"
-        android:layout_marginLeft="11dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginRight="11dp"
+        android:layout_width="299dp"
+        android:layout_height="51dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginRight="44dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="address"
         android:inputType="textPostalAddress"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/place_autocomplete_fragment" />
 
     <fragment
         android:id="@+id/place_autocomplete_fragment"
         android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="299dp"
+        android:layout_height="51dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextName" />
 
     <EditText
         android:id="@+id/editTextPhone"
-        android:layout_width="369dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="7dp"
-        android:layout_marginLeft="7dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_width="299dp"
+        android:layout_height="51dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginLeft="43dp"
+        android:layout_marginRight="42dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="phone"
         android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />
 
     <EditText
         android:id="@+id/editTextDescription"
-        android:layout_width="369dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="7dp"
-        android:layout_marginLeft="7dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_width="299dp"
+        android:layout_height="60dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginLeft="43dp"
+        android:layout_marginRight="42dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="description "
         android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
 
     <EditText
         android:id="@+id/editTextTags"
-        android:layout_width="367dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="7dp"
-        android:layout_marginLeft="7dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_width="299dp"
+        android:layout_height="51dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginLeft="43dp"
+        android:layout_marginRight="42dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="tags"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />
     <TextView
@@ -126,7 +126,7 @@
     <RatingBar
         android:id="@+id/ratingBar"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginEnd="96dp"
         android:layout_marginLeft="96dp"
         android:layout_marginRight="96dp"
@@ -143,7 +143,7 @@
         android:id="@+id/btnSaveRestaurant"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="106dp"
+        android:layout_marginBottom="84dp"
         android:layout_marginEnd="148dp"
         android:layout_marginLeft="148dp"
         android:layout_marginRight="148dp"
@@ -155,6 +155,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ratingBar"
-        app:layout_constraintVertical_bias="0.951" />
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
