--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,8 +22,14 @@
 
     <include
         layout="@layout/content_main"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="353dp"
+        android:layout_height="285dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginLeft="17dp"
+        android:layout_marginRight="14dp"
+        android:layout_marginStart="17dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnAddNewRestaurant"
