--- a/app/src/main/res/layout/activity_update_restaurant.xml
+++ b/app/src/main/res/layout/activity_update_restaurant.xml
@@ -8,23 +8,27 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="383dp"
-        android:layout_height="26dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
-        android:text="Add Restaurant"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginLeft="51dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginStart="51dp"
+        android:text="Update Restaurant"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="#340c84"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextName"
-        android:layout_width="366dp"
+        android:layout_width="299dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="11dp"
-        android:layout_marginLeft="7dp"
-        android:layout_marginRight="11dp"
-        android:layout_marginStart="7dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginLeft="43dp"
+        android:layout_marginRight="42dp"
+        android:layout_marginStart="43dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="name "
@@ -36,105 +40,111 @@
     <fragment
         android:id="@+id/place_autocomplete_fragment"
         android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_width="299dp"
+        android:layout_height="25dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginLeft="43dp"
+        android:layout_marginRight="42dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextName" />
 
     <EditText
         android:id="@+id/editTextAddress"
-        android:layout_width="366dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="7dp"
-        android:layout_marginLeft="7dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="299dp"
+        android:layout_height="51dp"
         android:layout_marginEnd="11dp"
+        android:layout_marginLeft="7dp"
         android:layout_marginRight="11dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="address"
         android:inputType="textPostalAddress"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.537"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/place_autocomplete_fragment" />
 
     <EditText
         android:id="@+id/editTextPhone"
-        android:layout_width="369dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="7dp"
-        android:layout_marginLeft="7dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_width="299dp"
+        android:layout_height="51dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginLeft="43dp"
+        android:layout_marginRight="42dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="phone"
         android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />
 
     <EditText
         android:id="@+id/editTextDescription"
-        android:layout_width="369dp"
-        android:layout_height="42dp"
+        android:layout_width="299dp"
+        android:layout_height="51dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="7dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="7dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="description "
         android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.514"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
 
     <EditText
         android:id="@+id/editTextTags"
-        android:layout_width="367dp"
-        android:layout_height="45dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginLeft="7dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="299dp"
+        android:layout_height="51dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginLeft="43dp"
+        android:layout_marginRight="42dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="tags"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />
+
     <TextView
         android:id="@+id/txtRatingValue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="37dp"
+        android:layout_height="41dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="43dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginTop="8dp"
         android:text=""
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        app:layout_constraintEnd_toStartOf="@+id/ratingBar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/ratingBar" />
 
     <RatingBar
         android:id="@+id/ratingBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="96dp"
-        android:layout_marginLeft="96dp"
+        android:layout_marginLeft="12dp"
         android:layout_marginRight="96dp"
-        android:layout_marginStart="96dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="12dp"
         android:numStars="4"
         android:rating="2.0"
         android:stepSize="1.0"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/txtRatingValue"
         app:layout_constraintTop_toBottomOf="@+id/editTextTags" />
 
     <Button
@@ -145,9 +155,10 @@
         android:layout_marginLeft="80dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="80dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         android:text="Save"
         app:layout_constraintEnd_toStartOf="@+id/btnLocationRestaurant"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
 
@@ -155,25 +166,15 @@
         android:id="@+id/btnDeleteRestaurant"
         android:layout_width="83dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginTop="4dp"
         android:text="Delete"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btnDirectionRestaurant"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnSaveRestaurant" />
+        app:layout_constraintTop_toBottomOf="@+id/btnSaveRestaurant"
+        tools:layout_editor_absoluteX="151dp" />
 
     <Button
         android:id="@+id/btnLocationRestaurant"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="80dp"
-        android:layout_marginRight="80dp"
-        android:layout_marginTop="8dp"
         android:text="Location"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
@@ -182,13 +183,14 @@
         android:id="@+id/btnDirectionRestaurant"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginRight="80dp"
         android:layout_marginBottom="60dp"
+        android:layout_marginEnd="96dp"
+        android:layout_marginRight="96dp"
+        android:layout_marginTop="16dp"
         android:text="Directions"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnSaveRestaurant" />
+        app:layout_constraintTop_toBottomOf="@+id/btnSaveRestaurant"
+        app:layout_constraintVertical_bias="0.81" />
 
 </android.support.constraint.ConstraintLayout>
