--- a/app/src/main/res/layout/activity_update_restaurant.xml
+++ b/app/src/main/res/layout/activity_update_restaurant.xml
@@ -136,16 +136,12 @@
         android:id="@+id/ratingBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="96dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="96dp"
-        android:layout_marginStart="12dp"
-        android:numStars="4"
+        android:layout_marginTop="8dp"
+        android:numStars="5"
         android:rating="2.0"
         android:stepSize="1.0"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/txtRatingValue"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTags" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTags"
+        tools:layout_editor_absoluteX="72dp" />
 
     <Button
         android:id="@+id/btnSaveRestaurant"
