--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -24,7 +24,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview"
-        android:layout_width="match_parent"
+        android:layout_width="375dp"
         android:layout_height="206dp"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
